--- a/stations.html.in
+++ b/stations.html.in
@@ -157,7 +157,7 @@ function toggle(control, id) {
   ...
   [[StationRegistry]]
     station_url = http://example.com/weather/
-    driver = weewx.register.StationRegistry
+    driver = weewx.restful.StationRegistry
 	  </pre>
         </p>
       </div>
