--- a/stations.html.in
+++ b/stations.html.in
@@ -25,6 +25,9 @@
 table {
   width: 100%;
 }
+.datetime {
+  text-align: right;
+}
   </style>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
   <script type="text/javascript">
@@ -71,13 +74,14 @@ function initialize() {
     attachinfo(mkr, i);
     var tr = document.createElement('tr');
     var td = document.createElement('td');
-    td.innerHTML = '<a href="' + sites[i].url + '">' + title + '</a>';
+    td.innerHTML = '<a href="' + sites[i].url + '">' + title + '</a><br/><small>' + sites[i].url + '</small>';
     tr.appendChild(td);
     var td = document.createElement('td');
     td.innerHTML = sites[i].station;
     tr.appendChild(td);    
     var td = document.createElement('td');
     var date = new Date(sites[i].last_seen * 1000);
+    td.className = 'datetime';
     td.innerHTML = date.toUTCString();
     tr.appendChild(td);
     tbdy.appendChild(tr);
@@ -152,19 +156,23 @@ function toggle(control, id) {
       
       <div id='map_canvas' style='width:620px; height:500px'></div>        
 
+      <p>&nbsp;</p>
+
       <div id='instructions'>
-        <p>
-	  <a name='addstation'> </a><strong>Add Your Station</strong><br/>
-	  To add your station to this list, put the following in weewx.conf
-          then restart weewx.
-	  <pre>
+        <div onclick="toggle(this,'instruction_details')">&#x25b6; <strong>How to Add Your Station</strong></div>
+        <div id='instruction_details' style='display:none'>
+          <p>
+	    To add your station to this list, put the following in weewx.conf,
+	    <pre>
 [StdRESTful]
-  ...
   [[StationRegistry]]
     station_url = http://example.com/weather/
     driver = weewx.restful.StationRegistry
-	  </pre>
-        </p>
+	    </pre>
+            replace <pre/>http://example.com/weather/</pre> with the URL
+            to your station, then restart weewx.
+          </p>
+        </div>
       </div>
       
       <div id='sites'>
