--- a/stations.html.in
+++ b/stations.html.in
@@ -5,6 +5,38 @@
   <title>Sample weewx stations</title>
   <link href="http://www.weewx.com/styles/style2.css" rel="stylesheet" type="text/css" />
   <style>
+#container {
+  width: 100%;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+#masthead {
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+#content {
+  float: none;
+  width: 798px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 4px;
+}
+#map_container {
+  margin-top: 4px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 4px;
+  border-top: 1px solid #dcdcdc;
+  border-right: 1px solid #a9a9a9;
+  border-bottom: 1px solid #808080;
+  border-left: 1px solid #a9a9a9;
+  background-color: #fff;
+}
+#footer {
+  margin-left: auto;
+  margin-right: auto;
+}
 .location {
   font-family: Helvetic, Arial, sans-serif;
   font-size: 10pt;
@@ -14,7 +46,7 @@
   font-family: Helvetic, Arial, sans-serif;
   font-size: 8pt;
 }
-.footer {
+.details {
   font-style: italic;
   text-align: right;
   font-size: 80%;
@@ -25,10 +57,16 @@
 table {
   width: 100%;
 }
-.datetime {
+.alignright {
   text-align: right;
 }
-  </style>
+.oddrow {
+  background-color: #f8f8f8;
+}
+.evenrow {
+  background-color: #ffffff;
+}
+</style>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
   <script type="text/javascript">
 var sites = [];
@@ -40,7 +78,7 @@ var infowindow = new google.maps.InfoWindow({
 var map;
 
 function initialize() {
-  var latlng = new google.maps.LatLng(21.616579,-50.210938);
+  var latlng = new google.maps.LatLng(21.0,0.0);
   var settings = {
     zoom: 2,
     center: latlng,
@@ -58,6 +96,7 @@ function initialize() {
   var s = document.getElementById('site_listing');
   var tbl = document.createElement('table');
   var tbdy = document.createElement('tbody');
+  rowclass = 'oddrow';
   for (var i=0; i<sites.length; i++) {
     var title = 'untitled';
     if(sites[i].description.length > 0) {
@@ -77,14 +116,17 @@ function initialize() {
     td.innerHTML = '<a href="' + sites[i].url + '">' + title + '</a><br/><small>' + sites[i].url + '</small>';
     tr.appendChild(td);
     var td = document.createElement('td');
-    td.innerHTML = sites[i].station;
-    tr.appendChild(td);    
-    var td = document.createElement('td');
     var date = new Date(sites[i].last_seen * 1000);
-    td.className = 'datetime';
-    td.innerHTML = date.toUTCString();
+    td.className = 'alignright';
+    td.innerHTML = sites[i].station + '<br/><small>' + date.toUTCString() + '</small>';
     tr.appendChild(td);
+    tr.className = rowclass;
     tbdy.appendChild(tr);
+    if(rowclass == 'oddrow') {
+      rowclass = 'evenrow'
+    } else {
+      rowclass = 'oddrow'
+    }
   }
   tbl.appendChild(tbdy);
   s.appendChild(tbl);
@@ -136,28 +178,16 @@ function toggle(control, id) {
       <h1>Weewx</h1>
       <h3>Open source software for your weather station</h3>
     </div>
-    <div id="navigation">
-      <ul>
-	<li><a href="http://www.weewx.com/">Home</a></li>
-	<li><a href="https://sourceforge.net/projects/weewx/files/">Downloads</a></li>
-	<li><a href="http://www.weewx.com/docs/">Documentation</a></li>
-	<li><a href="http://www.weewx.com/docs/changes.txt">Change Log</a></li>
-	<li><a href="https://sourceforge.net/projects/weewx/">
-	    <span class="code">weewx</span> on SourceForge</a></li>
-	<li><a href="http://groups.google.com/group/weewx-user">Users&#39; Group</a></li>
-	<li><a href="http://www.weewx.com/wunderfixer/default.htm">Wunderfixer</a></li>
-	<li><a href="stations.html">Sample Stations</a></li>
-      </ul>
-      <p>&nbsp;</p>
-      <p>&nbsp;</p>
+
+    <div id='map_container'>
+      <div id='map_canvas' style='width:100%; height:500px'></div>
+
+      <div class='details'>
+        LAST_MODIFIED
+      </div>
     </div>
 
     <div id='content'>
-      
-      <div id='map_canvas' style='width:620px; height:500px'></div>        
-
-      <p>&nbsp;</p>
-
       <div id='instructions'>
         <div onclick="toggle(this,'instruction_details')">&#x25b6; <strong>How to Add Your Station</strong></div>
         <div id='instruction_details' style='display:none'>
@@ -175,7 +205,7 @@ function toggle(control, id) {
           </p>
         </div>
       </div>
-      
+
       <div id='sites'>
         <div onclick="toggle(this,'site_listing')">&#x25b6; <strong>Weather Stations Running weewx</strong></div>
         <div id='site_listing' style='display:none'></div>
@@ -183,10 +213,17 @@ function toggle(control, id) {
 
     </div>
 
-    <div class='footer'>
-      LAST_MODIFIED
+    <div id="footer">
+      <p>
+        <a href="index.htm">Home</a> | 
+        <a href="https://sourceforge.net/projects/weewx/files/">Downloads</a> |
+        <a href="docs/">Documentation</a> | 
+        <a href="docs/changes.txt">Changes</a> | 
+        <a href="https://sourceforge.net/projects/weewx/"><span class="code">weewx</span> on SourceForge</a> | 
+        <a href="http://groups.google.com/group/weewx-user">Users&#39; Group</a>
+      </p>
     </div>
-  
+      
   <script type='text/javascript'>
 var gaJsHost = (('https:' == document.location.protocol) ? 'https://ssl.' : 'http://www.');
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
