--- a/stations.html.in
+++ b/stations.html.in
@@ -143,7 +143,8 @@ function attachinfo(marker, idx) {
     }
     str += '</a></p>';
     str += '<p class="location_details">';
-    str += sites[idx].latitude + ', ' + sites[idx].longitude + '<br/>';
+    str += sites[idx].latitude.toFixed(3) + ', ';
+    str += sites[idx].longitude.toFixed(3) + '<br/>';
     str += sites[idx].station + '<br/>';
     str += '</p>';
     infowindow.setContent(str);
