--- a/stations.html.in
+++ b/stations.html.in
@@ -1,41 +1,17 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr">
 <head>
+  <!-- map of weewx weather stations, by matthew wall -->
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Sample weewx stations</title>
-  <link href="http://www.weewx.com/styles/style2.css" rel="stylesheet" type="text/css" />
+  <title>WeeWX: Stations Running WeeWX</title>
+  <link href="weewx.css" rel="stylesheet" type="text/css" />
+  <script src="weewx.js" type="text/javascript"></script>
   <style>
-#container {
-  width: 100%;
-  padding-left: 0px;
-  padding-right: 0px;
-}
-#masthead {
-  float: none;
-  margin-left: auto;
-  margin-right: auto;
-}
-#content {
-  float: none;
-  width: 798px;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 4px;
-}
 #map_container {
-  margin-top: 4px;
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 4px;
-  border-top: 1px solid #dcdcdc;
-  border-right: 1px solid #a9a9a9;
-  border-bottom: 1px solid #808080;
-  border-left: 1px solid #a9a9a9;
-  background-color: #fff;
+  margin-top: 10px;
 }
-#footer {
-  margin-left: auto;
-  margin-right: auto;
+#map_canvas {
+  border: 1px solid #5f8ea9;
 }
 .location {
   font-family: Helvetic, Arial, sans-serif;
@@ -46,19 +22,27 @@
   font-family: Helvetic, Arial, sans-serif;
   font-size: 8pt;
 }
+.gm-style-iw {
+  width: 250px;
+}
 .details {
   font-style: italic;
   text-align: right;
   font-size: 80%;
 }
 #summary {
+}
+#instructions {
+  float: left;
+  width: 60%;
+}
+#station_summary {
+  float: right;
+  width: 30%;
+}
+#sites {
+  clear: both;
   padding-top: 20px;
-}
-.gm-style-iw {
-  width: 250px;
-}
-table {
-  width: 100%;
 }
 .alignright {
   text-align: right;
@@ -69,7 +53,7 @@ table {
 .evenrow {
   background-color: #ffffff;
 }
-</style>
+  </style>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
   <script type="text/javascript">
 var sites = [];
@@ -78,9 +62,11 @@ var infowindow = new google.maps.InfoWindow({
   content: 'nothing selected'
 });
 
-var map;
+var backgroundColor = '#ffffff';
+var borderColor = '#2f5e79';
+var highlightColor = '#5f8ea9';
 
-function initialize() {
+function initialize_map() {
   var latlng = new google.maps.LatLng(21.0,0.0);
   var settings = {
     zoom: 2,
@@ -95,7 +81,8 @@ function initialize() {
     },
     mapTypeId: google.maps.MapTypeId.ROADMAP
   };
-  map = new google.maps.Map(document.getElementById("map_canvas"), settings);
+  var canvas = document.getElementById("map_canvas");
+  var map = new google.maps.Map(canvas, settings);
   var s = document.getElementById('site_listing');
   var tbl = document.createElement('table');
   var tbdy = document.createElement('tbody');
@@ -115,7 +102,7 @@ function initialize() {
       map: map,
       title: title,
     });
-    attachinfo(mkr, i);
+    attach_info(map, mkr, i);
     var tr = document.createElement('tr');
     var td = document.createElement('td');
     td.innerHTML = '<a href="' + sites[i].url + '">' + title + '</a><br/><small>' + sites[i].url + '</small>';
@@ -124,6 +111,12 @@ function initialize() {
     var date = new Date(sites[i].last_seen * 1000);
     td.className = 'alignright';
     td.innerHTML = sites[i].station + '<br/><small>' + date.toUTCString() + '</small>';
+    tr.appendChild(td);
+    var td = document.createElement('td');
+    td.id = 'site_' + i;
+    td.style.width = '18px';
+    td.style.border = '1px solid ' + borderColor;
+    attach_mouse(td, map, mkr, i);
     tr.appendChild(td);
     tr.className = rowclass;
     tbdy.appendChild(tr);
@@ -142,6 +135,8 @@ function initialize() {
   tbl.appendChild(tbdy);
   s.appendChild(tbl);
 
+  var s = document.getElementById('station_summary_details');
+  var tbl = document.createElement('table');
   var tbdy = document.createElement('tbody');
   for(var key in counts) {
     var tr = document.createElement('tr');
@@ -154,30 +149,56 @@ function initialize() {
     tr.appendChild(td);
     tbdy.appendChild(tr);
   }
-  var tbl = document.createElement('table');
   tbl.appendChild(tbdy);
-  var s = document.getElementById('station_summary_details');
   s.appendChild(tbl);
 }
 
-function attachinfo(marker, idx) {
+function create_content(idx) {
+  var str = '<p class="location">';
+  str += '<a href="' + sites[idx].url + '">';
+  if(sites[idx].description.length > 0) {
+    str += sites[idx].description;
+  } else {
+    str += sites[idx].url;
+  }
+  str += '</a></p>';
+  str += '<p class="location_details">';
+  str += sites[idx].latitude.toFixed(3) + ', ';
+  str += sites[idx].longitude.toFixed(3) + '<br/>';
+  str += sites[idx].station + '<br/>';
+  str += '</p>';
+  return str;
+}
+
+function attach_info(map, marker, idx) {
   google.maps.event.addListener(marker, 'click', function() {
-    var str = '<p class="location">';
-    str += '<a href="' + sites[idx].url + '">';
-    if(sites[idx].description.length > 0) {
-      str += sites[idx].description;
-    } else {
-      str += sites[idx].url;
+      var str = create_content(idx);
+      infowindow.setContent(str);
+      infowindow.open(map, marker);
+      highlight_row(idx);
+    });
+}
+
+function attach_mouse(elem, map, marker, idx) {
+  elem.addEventListener('click', function() {
+      var str = create_content(idx);
+      infowindow.setContent(str);
+      infowindow.open(map, marker);
+      highlight_row(idx);
+    });
+}
+
+function highlight_row(idx) {
+  for(var i=0; i<sites.length; i++) {
+    var elem = document.getElementById('site_' + i);
+    if(elem) {
+      var color = backgroundColor;
+      if(idx == i) {
+        color = highlightColor;
+      }
+      elem.style.backgroundColor = color;
     }
-    str += '</a></p>';
-    str += '<p class="location_details">';
-    str += sites[idx].latitude.toFixed(3) + ', ';
-    str += sites[idx].longitude.toFixed(3) + '<br/>';
-    str += sites[idx].station + '<br/>';
-    str += '</p>';
-    infowindow.setContent(str);
-    infowindow.open(map, marker);
-  });
+  }
 }
 
 function toggle(control, id) {
@@ -201,12 +222,15 @@ function toggle(control, id) {
   </script>
 </head>
 
-<body onload="initialize()">
+<body onload="initialize_map(); populate_header('stations');">
   <div id="container">
     <div id="masthead">
-      <h1>Weewx</h1>
-      <h3>Open source software for your weather station</h3>
+      <h1><a href='.'>WeeWX</a></h1>
+      <p>Open source software for your weather station</p>
     </div>
+
+  <div id="navigation">
+  </div>
 
     <div id='map_container'>
       <div id='map_canvas' style='width:100%; height:500px'></div>
@@ -218,22 +242,14 @@ function toggle(control, id) {
 
     <div id='content'>
 
-      <div id='sites'>
-        <div onclick="toggle(this,'site_listing')">&#x25b6; <strong>Weather Stations Running weewx</strong></div>
-        <div id='site_listing' style='display:none'></div>
-      </div>
-
       <div id='summary'>
-        <table>
-          <tr valign='top'><td>
       <div id='instructions'>
         <strong>How to Add Your Station</strong>
         <div id='instruction_details'>
           <p>
-	    To put your station on this list, add <pre>register_this_station = True</pre> to weewx.conf, then restart weewx.
-          </p>
-          <p>
-            Your weewx.conf should look something like this:
+	    Enable <span class='code'>register_this_station</span> in
+            weewx.conf, then restart weewx. Your weewx.conf should look
+            something like this:
 	    <pre>
 [StdRESTful]
     ...
@@ -243,29 +259,18 @@ function toggle(control, id) {
           </p>
         </div>
       </div>
-            </td>
-            <td>
       <div id='station_summary'>
         <strong>Station Summary</strong>
         <div id='station_summary_details'>
         </div>
       </div>
-            </td>
-          </tr>
-        </table>
       </div>
 
-    </div>
+      <div id='sites'>
+        <div onclick="toggle(this,'site_listing')">&#x25b6; <strong>Station List</strong></div>
+        <div id='site_listing' style='display:none'></div>
+      </div>
 
-    <div id="footer">
-      <p>
-        <a href="index.htm">Home</a> | 
-        <a href="https://sourceforge.net/projects/weewx/files/">Downloads</a> |
-        <a href="docs/">Documentation</a> | 
-        <a href="docs/changes.txt">Changes</a> | 
-        <a href="https://sourceforge.net/projects/weewx/"><span class="code">weewx</span> on SourceForge</a> | 
-        <a href="http://groups.google.com/group/weewx-user">Users&#39; Group</a>
-      </p>
     </div>
       
   <script type='text/javascript'>
