--- a/stations.html.in
+++ b/stations.html.in
@@ -40,6 +40,9 @@
   float: right;
   width: 30%;
 }
+#station_summary_details td {
+  padding-right: 10px;
+}
 #sites {
   clear: both;
   padding-top: 20px;
@@ -65,6 +68,23 @@ var infowindow = new google.maps.InfoWindow({
 var backgroundColor = '#ffffff';
 var borderColor = '#2f5e79';
 var highlightColor = '#5f8ea9';
+
+function count_sorter(a,b) {
+  if(a == 'total') {
+    return -1;
+  } else if(b == 'total') {
+    return 1;
+  }
+  var A = a.toLowerCase();
+  var B = b.toLowerCase();
+  if(A < B) {
+    return -1;
+  } else if(A > B) {
+    return 1;
+  } else {
+    return 0;
+  }
+}
 
 function initialize_map() {
   var latlng = new google.maps.LatLng(21.0,0.0);
@@ -138,14 +158,19 @@ function initialize_map() {
   var s = document.getElementById('station_summary_details');
   var tbl = document.createElement('table');
   var tbdy = document.createElement('tbody');
+  var count_keys = new Array();
   for(var key in counts) {
+    count_keys.push(key);
+  }
+  count_keys.sort(count_sorter);
+  for(var key in count_keys) {
     var tr = document.createElement('tr');
     var td = document.createElement('td');
-    td.innerHTML = key;
+    td.innerHTML = count_keys[key];
     tr.appendChild(td);
     var td = document.createElement('td');
     td.className = 'alignright';
-    td.innerHTML = counts[key];
+    td.innerHTML = counts[count_keys[key]];
     tr.appendChild(td);
     tbdy.appendChild(tr);
   }
@@ -269,7 +294,7 @@ function toggle(control, id) {
         <div onclick="toggle(this,'site_listing')">&#x25b6; <strong>Station List</strong></div>
         <div id='site_listing' style='display:none'></div>
       </div>
-    </div>      
+    </div>
   </div>
 
   <script type='text/javascript'>
