--- a/stations.html.in
+++ b/stations.html.in
@@ -47,6 +47,11 @@
   clear: both;
   padding-top: 20px;
 }
+#site_listing td {
+  background-repeat:no-repeat;
+  background-position:center;
+  background-size:12px;
+}
 .alignright {
   text-align: right;
 }
@@ -55,6 +60,10 @@
 }
 .evenrow {
   background-color: #ffffff;
+}
+.indicator {
+  width: 18px;
+  border: 1px solid #2f5e79;
 }
   </style>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
@@ -68,8 +77,7 @@ var infowindow = new google.maps.InfoWindow({
 });
 
 var backgroundColor = '#ffffff';
-var borderColor = '#2f5e79';
-var highlightColor = '#5f8ea9';
+var highlightColor = '#9fcef9';
 
 function count_sorter(a,b) {
   if(a == 'total') {
@@ -139,8 +147,7 @@ function initialize_map() {
     tr.appendChild(td);
     var td = document.createElement('td');
     td.id = 'site_' + i;
-    td.style.width = '18px';
-    td.style.border = '1px solid ' + borderColor;
+    td.className = 'indicator';
     attach_station(td, map, mkr, i);
     tr.appendChild(td);
     tr.className = rowclass;
@@ -179,8 +186,7 @@ function initialize_map() {
     tr.appendChild(td);
     var td = document.createElement('td');
     td.id = 'station_type_' + count_keys[key];
-    td.style.width = '18px';
-    td.style.border = '1px solid ' + borderColor;
+    td.className = 'indicator';
     attach_station_type(td, count_keys[key]);
     tr.appendChild(td);
     tbdy.appendChild(tr);
@@ -208,35 +214,35 @@ function create_content(idx) {
 
 function attach_info(map, marker, idx) {
   google.maps.event.addListener(marker, 'click', function() {
-      show_all_markers();
       var str = create_content(idx);
       infowindow.setContent(str);
       infowindow.open(map, marker);
-      dehighlight_all_types();
-      dehighlight_all();
-      highlight_row(idx);
+      hide_all_dots();
+      show_dot(idx);
     });
 }
 
 function attach_station(elem, map, marker, idx) {
   elem.addEventListener('click', function() {
-      dehighlight_all();
-      highlight_row(idx);
-      show_all_markers();
       var str = create_content(idx);
       infowindow.setContent(str);
       infowindow.open(map, marker);
-      dehighlight_all_types();
+      hide_all_dots();
+      show_dot(idx);
     });
 }
 
 function attach_station_type(elem, station_type) {
   elem.addEventListener('click', function() {
-      dehighlight_all_types();
+      for(var key in count_keys) {
+        dehighlight(document.getElementById('station_type_'+count_keys[key]));
+      }
       highlight(document.getElementById('station_type_' + station_type));
       infowindow.close();
       dehighlight_all();
+      infowindow.close();
       hide_all_markers();
+      hide_all_dots();
       for(i=0; i<sites.length; i++) {
         if(station_type == 'total' || sites[i].station == station_type) {
           show_marker(i);
@@ -274,6 +280,26 @@ function dehighlight_all() {
   }
 }
 
+function show_dot(idx) {
+  elem = document.getElementById('site_' + idx);
+  if(elem) {
+    elem.style.backgroundImage = 'url(dot.png)';
+  }
+}
+
+function hide_dot(idx) {
+  elem = document.getElementById('site_' + idx);
+  if(elem) {
+    elem.style.backgroundImage = '';
+  }
+}
+
+function hide_all_dots() {
+  for(var i=0; i<sites.length; i++) {
+    hide_dot(i);
+  }
+}
+
 function show_marker(idx) {
   sites[idx].marker.setMap(map);
 }
@@ -291,12 +317,6 @@ function show_all_markers() {
 function hide_all_markers() {
   for(var i=0; i<sites.length; i++) {
     hide_marker(i);
-  }
-}
-
-function dehighlight_all_types() {
-  for(var key in count_keys) {
-    dehighlight(document.getElementById('station_type_' + count_keys[key]));
   }
 }
 
