--- a/stations.html.in
+++ b/stations.html.in
@@ -66,6 +66,7 @@
 .indicator {
   width: 18px;
   border: 1px solid #2f5e79;
+  cursor: cell;
 }
   </style>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
