--- a/stations.html.in
+++ b/stations.html.in
@@ -50,9 +50,21 @@
   padding-top: 20px;
   padding-right: 20px;
 }
+#site_listing table {
+  padding-top: 10px;
+}
 #site_listing td {
   background-repeat: no-repeat;
   background-position: center;
+}
+.sort_buttons {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.button_pair {
+  float: left;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .alignright {
   text-align: right;
@@ -119,13 +131,9 @@ function initialize_map() {
     mapTypeId: google.maps.MapTypeId.ROADMAP
   };
 
-  /* populate the map and station list table */
+  /* populate the map */
   var canvas = document.getElementById("map_canvas");
   map = new google.maps.Map(canvas, settings);
-  var s = document.getElementById('site_listing');
-  var tbl = document.createElement('table');
-  var tbdy = document.createElement('tbody');
-  var rowclass = 'oddrow';
 
   /* track counts of each station type */
   var counts = {};
@@ -139,15 +147,7 @@ function initialize_map() {
 
   /* loop through all sites to get the data we need */
   for (var i=0; i<sites.length; i++) {
-    var title = 'untitled';
-    if(sites[i].description.length > 0) {
-      title = sites[i].description;
-    } else {
-      title = sites[i].url;
-    }
-    if(title.length > maxTitleLen) {
-      title = title.substr(0,maxTitleLen).concat('...');
-    }
+    var title = get_title(sites[i]);
     var pos = new google.maps.LatLng(sites[i].latitude, sites[i].longitude);
     var mkr = new google.maps.Marker({
       position: pos,
@@ -156,27 +156,6 @@ function initialize_map() {
     });
     sites[i].marker = mkr;
     attach_info(map, mkr, i);
-    var tr = document.createElement('tr');
-    var td = document.createElement('td');
-    td.innerHTML = '<a href="' + sites[i].url + '">' + title + '</a><br/><small>' + sites[i].url + '</small>';
-    tr.appendChild(td);
-    var td = document.createElement('td');
-    var date = new Date(sites[i].last_seen * 1000);
-    td.className = 'alignright';
-    td.innerHTML = sites[i].station + '<br/><small>' + date.toUTCString() + '</small>';
-    tr.appendChild(td);
-    var td = document.createElement('td');
-    td.id = 'site_' + i;
-    td.className = 'indicator';
-    attach_station(td, map, mkr, i);
-    tr.appendChild(td);
-    tr.className = rowclass;
-    tbdy.appendChild(tr);
-    if(rowclass == 'oddrow') {
-      rowclass = 'evenrow'
-    } else {
-      rowclass = 'oddrow'
-    }
 
     /* do the station count accounting */
     counts['total'] = counts['total'] + 1;
@@ -198,12 +177,119 @@ function initialize_map() {
       maxpings = pings[idx];
     }
   }
+
+  populate_station_list('description', 'up');
+  populate_station_table(counts);
+  draw_ping_histogram(pings, maxpings);
+}
+
+function populate_station_list(sort_metric, sort_order) {
+  // do the sort...
+  var indices = [];
+  for (var i=0; i<sites.length; i++) {
+    indices[i] = i;
+  }
+  if (sort_metric == 'description') {
+    if (sort_order == 'dn') {
+      for (var i=0; i<sites.length; i++) {
+        indices[i] = sites.length-i-1;
+      }
+    }
+  } else if (sort_metric == 'url') {
+    if (sort_order == 'up') {
+      indices.sort(function(a,b) {
+        return sites[a].url.toLowerCase() > sites[b].url.toLowerCase(); });
+    } else {
+      indices.sort(function(a,b) {
+        return sites[a].url.toLowerCase() < sites[b].url.toLowerCase(); });
+    }
+  } else if (sort_metric == 'latitude') {
+    if (sort_order == 'up') {
+      indices.sort(function(a,b) {
+        return sites[a].latitude > sites[b].latitude; });
+    } else {
+      indices.sort(function(a,b) {
+        return sites[a].latitude < sites[b].latitude; });
+    }
+  } else if (sort_metric == 'longitude') {
+    if (sort_order == 'up') {
+      indices.sort(function(a,b) {
+        return sites[a].longitude > sites[b].longitude; });
+    } else {
+      indices.sort(function(a,b) {
+        return sites[a].longitude < sites[b].longitude; });
+    }
+  } else if (sort_metric == 'station') {
+    if (sort_order == 'up') {
+      indices.sort(function(a,b) {
+        return sites[a].station > sites[b].station; });
+    } else {
+      indices.sort(function(a,b) {
+        return sites[a].station < sites[b].station; });
+    }
+  } else if (sort_metric == 'last_seen') {
+    if (sort_order == 'up') {
+      indices.sort(function(a,b) {
+        return sites[a].last_seen > sites[b].last_seen; });
+    } else {
+      indices.sort(function(a,b) {
+        return sites[a].last_seen < sites[b].last_seen; });
+    }
+  }
+
+  // ...clear existing list...
+  var s = document.getElementById('site_listing');
+  while (s.firstChild) {
+    s.removeChild(s.firstChild);
+  }
+
+  // ...then populate the table
+  var tbl = document.createElement('table');
+  var tbdy = document.createElement('tbody');
+  var rowclass = 'oddrow';
+  var tr = document.createElement('tr');
+  var td = document.createElement('td');
+  var buttons = create_buttons("Description", "description");
+  buttons += create_buttons("URL", "url");
+  buttons += create_buttons("Latitude", "latitude");
+  buttons += create_buttons("Longitude", "longitude");
+  buttons += create_buttons("Station", "station");
+  buttons += create_buttons("Last Seen", "last_seen");
+  td.innerHTML = buttons;
+  td.colSpan = "3";
+  td.className = 'sort_buttons';
+  tr.appendChild(td);
+  tbdy.appendChild(tr);
+  for (var i=0; i<indices.length; i++) {
+    var title = get_title(sites[indices[i]]);
+    var tr = document.createElement('tr');
+    var td = document.createElement('td');
+    td.innerHTML = '<a href="' + sites[indices[i]].url + '">' + title + '</a><br/><small>' + sites[indices[i]].url + '</small>';
+    tr.appendChild(td);
+    var td = document.createElement('td');
+    var date = new Date(sites[indices[i]].last_seen * 1000);
+    td.className = 'alignright';
+    td.innerHTML = sites[indices[i]].station + '<br/><small>' + date.toUTCString() + '</small>';
+    tr.appendChild(td);
+    td = document.createElement('td');
+    td.id = 'site_' + indices[i];
+    td.className = 'indicator';
+    attach_station(td, map, sites[indices[i]].marker, indices[i]);
+    tr.appendChild(td);
+    tr.className = rowclass;
+    tbdy.appendChild(tr);
+    if(rowclass == 'oddrow') {
+      rowclass = 'evenrow'
+    } else {
+      rowclass = 'oddrow'
+    }
+  }
   tbl.appendChild(tbdy);
   s.appendChild(tbl);
+}
 
-  populate_station_table(counts);
-
-  draw_ping_histogram(pings, maxpings);
+function create_buttons(label, sort_metric) {
+  return "<div class='button_pair'><input type='submit' value='" + label + " &#8593;' onClick='populate_station_list(\"" + sort_metric + "\",\"up\")' /><br/><input type='submit' value='" + label + " &#8595;' onClick='populate_station_list(\"" + sort_metric + "\",\"dn\")' /></div>";
 }
 
 function populate_station_table(counts) {
@@ -407,6 +493,19 @@ function toggle(control, id) {
     html = indicator + html.substr(1,html.length);
     control.innerHTML = html;
   }
+}
+
+function get_title(x) {
+  var title = 'untitled';
+  if(x.description.length > 0) {
+    title = x.description;
+  } else {
+    title = x.url;
+  }
+  if(title.length > maxTitleLen) {
+    title = title.substr(0,maxTitleLen).concat('...');
+  }
+  return title;
 }
   </script>
 </head>
