--- a/weewx.conf
+++ b/weewx.conf
@@ -600,8 +600,8 @@ version = 3.0.0a1
     [[WxEngine]]
     
         # The list of services the main weewx engine should run:
-        prep_services = weewx.wxengine.StdTimeSynch
-        process_services = weewx.wxengine.StdConvert, weewx.wxengine.StdCalibrate, weewx.wxengine.StdQC
-        archive_services = weewx.wxengine.StdArchive
+        prep_services = weecore.wxengine.StdTimeSynch
+        process_services = weecore.wxengine.StdConvert, weecore.wxengine.StdCalibrate, weecore.wxengine.StdQC
+        archive_services = weecore.wxengine.StdArchive
         restful_services = weewx.restx.StdStationRegistry, weewx.restx.StdWunderground, weewx.restx.StdPWSweather, weewx.restx.StdCWOP, weewx.restx.StdWOW, weewx.restx.StdAWEKAS
-        report_services = weewx.wxengine.StdPrint, weewx.wxengine.StdReport
+        report_services = weecore.wxengine.StdPrint, weecore.wxengine.StdReport
