--- a/skins/Ftp/skin.conf
+++ b/skins/Ftp/skin.conf
@@ -8,5 +8,5 @@
 ###############################################################################
 
 [Generators]
-    generator_list = weewx.reportengine.FtpGenerator
+    generator_list = weecore.reportengine.FtpGenerator
         
