--- a/skins/Rsync/skin.conf
+++ b/skins/Rsync/skin.conf
@@ -9,5 +9,5 @@
 ###############################################################################
 
 [Generators]
-    generator_list = weewx.reportengine.RsyncGenerator
+    generator_list = weecore.reportengine.RsyncGenerator
         
