--- a/skins/Standard/skin.conf
+++ b/skins/Standard/skin.conf
@@ -644,6 +644,6 @@
 # The list of generators that are to be run:
 #
 [Generators]
-        generator_list = weewx.cheetahgenerator.CheetahGenerator, weewx.imagegenerator.ImageGenerator, weewx.reportengine.CopyGenerator
+        generator_list = weecore.cheetahgenerator.CheetahGenerator, weecore.imagegenerator.ImageGenerator, weecore.reportengine.CopyGenerator
 
 
