--- a/weewx.conf
+++ b/weewx.conf
@@ -9,10 +9,10 @@
 # This section is for general configuration information
 
 # Set to 1 for extra debug info, otherwise comment it out or set to zero.
-debug = 0
+debug = 1
 
 # Root directory of the weewx data file hierarchy for this station.
-WEEWX_ROOT = /home/weewx
+WEEWX_ROOT = /home/weecore
 
 # How long to wait before timing out a socket (FTP, HTTP) connection:
 socket_timeout = 20
